--- a/VirtualGamepad/app/src/main/AndroidManifest.xml
+++ b/VirtualGamepad/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="org.example.virtualgamepad">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -10,13 +11,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activities.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
+        <activity android:name=".ui.activities.MainActivity"/>
         <activity android:name=".ui.activities.ConnectionActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
