Refactore code of the driver. Rename LKM name and device path.

--- a/gamepad-driver/src/Makefile
+++ b/gamepad-driver/src/Makefile
@@ -1,6 +1,6 @@
-CONFIG_MODULE_SIG=n
 
-obj-m += gamepad_km.o
+obj-m += virtual_gamepad_driver.o
+ccflags-y := -std=gnu99
 
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(shell pwd) modules
